--- a/Locales/en.txt
+++ b/Locales/en.txt
@@ -1,17 +1,17 @@
-﻿FOOD_STORED	Food Stored
-LUMBER_STORED	Lumber Stored
-COAL_STORED	Coal Stored
-PETROL_STORED	Petrol Stored
-CONSTRUCTION_RESOURCE	Construction Resource
-OPERATION_RESOURCE	Operation Resource"
-OPERATION_RESOURCE_LEFT	Operation Resource Left
-TRANSFER_CONSTRUCTION_RESOURCE_TO	Transfer construction resource to
-TRANSFER_OPERATION_RESOURCE_TO	Transfer operation resource to
-GOING_FOR_FUEL_TO	Going for Fuel to
-GENERATE_BOTH_RESOURCES	Generate Both Resources
-GENERATE_CONSTRUCTION_RESOURCES	Generate Construction Resource
-GENERATE_OPERATION_RESOURCES	Generate Operation Resource
-DEBUG_MODE	More Information
+﻿FOOD_STORED	Food
+LUMBER_STORED	Lumber
+COAL_STORED	Coal
+PETROL_STORED	Petrol
+CONSTRUCTION_RESOURCE	Construction Resources
+OPERATION_RESOURCE	Operation Resources
+OPERATION_RESOURCE_LEFT	Operation Resources Remained
+TRANSFER_CONSTRUCTION_RESOURCE_TO	Sending construction resources to
+TRANSFER_OPERATION_RESOURCE_TO	Sending operation resources to
+GOING_FOR_FUEL_TO	Enroute to gas station at
+GENERATE_BOTH_RESOURCES	Produce Both Resources
+GENERATE_CONSTRUCTION_RESOURCES	Produce Construction Resources
+GENERATE_OPERATION_RESOURCES	Produce Operation Resources
+DEBUG_MODE	Debug UI
 SHOW_LACK_OF_RESOURCE	Show lack of resource icon on buildings when lack of construction or operation resources
 FIX_UNROUTED_TRANSFER_MATCH_DESCRIPTION	Fix UnRouted Transfer Match If you have district with broken roadnetwork
 FIX_UNROUTED_TRANSFER_MATCH_ENALBE	Fix UnRouted Transfer Match Enable
