--- a/Locales/en.txt
+++ b/Locales/en.txt
@@ -8,9 +8,12 @@ OPERATION_RESOURCE_LEFT	Operation Resources Remained
 TRANSFER_CONSTRUCTION_RESOURCE_TO	Sending construction resources to
 TRANSFER_OPERATION_RESOURCE_TO	Sending operation resources to
 GOING_FOR_FUEL_TO	Enroute to gas station at
+BUILDING_TYPE	Building Function
+NORMAL_BUILDING	Normal Building
 GENERATE_BOTH_RESOURCES	Produce Both Resources
 GENERATE_CONSTRUCTION_RESOURCES	Produce Construction Resources
 GENERATE_OPERATION_RESOURCES	Produce Operation Resources
+NONEED_RESOURCE	No need resources
 DEBUG_MODE	Debug UI
 SHOW_LACK_OF_RESOURCE	Show lack of resource icon on buildings when lack of construction or operation resources
 FIX_UNROUTED_TRANSFER_MATCH_DESCRIPTION	Fix UnRouted Transfer Match If you have district with broken roadnetwork
