--- a/Locales/zh.txt
+++ b/Locales/zh.txt
@@ -8,9 +8,12 @@ OPERATION_RESOURCE_LEFT	剩余的运营资源
 TRANSFER_CONSTRUCTION_RESOURCE_TO	运输建筑资源到
 TRANSFER_OPERATION_RESOURCE_TO	运输运营资源到
 GOING_FOR_FUEL_TO	前往加油站
+BUILDING_TYPE	建筑功能
+NORMAL_BUILDING	普通建筑
 GENERATE_BOTH_RESOURCES	生产两种资源
 GENERATE_CONSTRUCTION_RESOURCES	只生产建筑资源
 GENERATE_OPERATION_RESOURCES	只生产运营资源
+NONEED_RESOURCE	不需要资源
 DEBUG_MODE	更多的信息
 SHOW_LACK_OF_RESOURCE	对缺少建筑或运营资源的建筑显示缺货图标
 FIX_UNROUTED_TRANSFER_MATCH_DESCRIPTION	修正无法连接的运输,如果你有区域是和其它区域道路连接是隔离的
