--- a/Locales/zh.txt
+++ b/Locales/zh.txt
@@ -18,3 +18,7 @@ DEBUG_MODE	更多的信息
 SHOW_LACK_OF_RESOURCE	对缺少建筑或运营资源的建筑显示缺货图标
 FIX_UNROUTED_TRANSFER_MATCH_DESCRIPTION	修正无法连接的运输,如果你有区域是和其它区域道路连接是隔离的
 FIX_UNROUTED_TRANSFER_MATCH_ENALBE	修正无法连接的运输
+OPERATION_RESOURCE_CONSUMPTION	运营资源消耗速度
+NORMAL	正常
+HALF	减半
+NONE	不需要
